--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="search_icon">Search Icon</string>
     <string name="permission_denied_read_write_text">Please provide read write permission to use app</string>
     <string name="go_to_settings">Go To Settings</string>
+    <string name="music_playing_content_description">showing music is playing</string>
 </resources>
