--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="song_info_display_name"><![CDATA[<b><h4>Display Name: </h4></b>]]>\t %s</string>
     <string name="song_info_title"><![CDATA[<b><h4>Title: </h4></b>]]>\t %s</string>
     <string name="song_info_image">Song info image</string>
+    <string name="go_online">Go Online</string>
+    <string name="sync">Sync</string>
 </resources>
